Fix notes from code review